<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:background="@color/my_white"
           android:padding="@dimen/padding"
           android:orientation="vertical"
           android:layout_margin="@dimen/margin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <!--Logo-->
           <ImageView
               android:src="@drawable/logo"
               android:layout_gravity="center_horizontal"
               android:layout_width="@dimen/logo"
               android:layout_height="@dimen/logo" />
           <!--Add name-->
           <TextView
               android:layout_marginBottom="@dimen/margin2"
               android:layout_marginTop="@dimen/margin2"
               android:textColor="@color/colorPrimary"
               android:layout_gravity="center_horizontal"
               android:textStyle="bold"
               android:text="@string/title_thai"
               android:textSize="@dimen/h1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <!--User-->
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <!--Icon-->
               <ImageView
                   android:layout_gravity="center_vertical"
                   android:src="@drawable/ic_action_user"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <!--Texfield-->
               <EditText
                   android:id="@+id/edtUser"
                   android:textColor="@color/colorPrimaryDark"
                   android:inputType="text"
                   android:hint="@string/user"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

           </LinearLayout>
           <!--Password   -->
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <!--Icon-->
               <ImageView
                   android:layout_gravity="center_vertical"
                   android:src="@drawable/ic_action_password"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <!--Texfield-->
               <EditText
                   android:id="@+id/edtPassword"
                   android:textColor="@color/colorPrimaryDark"
                   android:inputType="textPassword"
                   android:hint="@string/pass"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

           </LinearLayout>
           <!--Login Button-->
           <Button
               android:id="@+id/btnLogin"
               android:text="@string/login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <!--New Regis-->
           <TextView
               android:clickable="true"
               android:id="@+id/txtNewRegister"
               android:layout_marginTop="@dimen/margin2"
               android:textStyle="italic"
               android:textColor="@color/colorAccent"
               android:layout_gravity="center_horizontal"
               android:text="@string/register"
               android:textSize="@dimen/h2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

       </LinearLayout>

   </ScrollView>


    <!--Content-->



</LinearLayout>