<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Toolbar-->
    <include
        android:id="@+id/toolbarRegister"
        layout="@layout/my_toolbar" />

    <!--Content-->
    <LinearLayout
        android:background="@color/my_white"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!--Name-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--Texfield-->
            <EditText
                android:id="@+id/edtName"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    <!--User-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--Texfield-->
            <EditText
                android:id="@+id/edtUser"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    <!--PASSWORD-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Icon-->
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_action_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!--Texfield-->
            <EditText
                android:id="@+id/edtPassword"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>